set decorator params for conv note

--- a/force-app/main/default/classes/NKS_DialogueViewController.cls
+++ b/force-app/main/default/classes/NKS_DialogueViewController.cls
@@ -32,7 +32,13 @@ public with sharing class NKS_DialogueViewController {
                 CRM_Theme__r.Name,
                 CRM_Journal_Status_Formula__c,
                 CRM_Read_Date__c,
-                CreatedById
+                CreatedById,
+                Name,
+                CRM_Registered_Datetime_Formula__c,
+                CRM_Henvendelse_BehandlingskjedeId__c,
+                CRM_Henvendelse_BehandlingsId__c,
+                CRM_API_Reference__c,
+                CRM_Theme_Group_Name__c
             FROM Conversation_Note__c
             WHERE Id = :convNoteId
         ];
