Update vilkår link

--- a/force-app/main/default/translations/no.translation-meta.xml
+++ b/force-app/main/default/translations/no.translation-meta.xml
@@ -150,7 +150,7 @@
     </customLabels>
     <customLabels>
         <label>Du kan lese mer &lt;a
-            href=&quot;https://www.nav.no/no/nav-og-samfunn/om-nav/personvern-i-arbeids-og-velferdsetaten/personvernerklaering-for-arbeids-og-velferdsetaten&quot;&gt;om
+            href=&quot;https://www.nav.no/personvernerklaering&quot;&gt;om
             hva personopplysninger brukes til i Nav, i vår personvernerklæring&lt;/a&gt;. &lt;br
             /&gt; &lt;br /&gt;
             Kontakt oss på chat eller telefon &lt;a href=&quot;tel:55553333&quot;&gt;55 55 33
