remove chat from vilkår tekst

--- a/force-app/main/default/translations/no.translation-meta.xml
+++ b/force-app/main/default/translations/no.translation-meta.xml
@@ -153,7 +153,7 @@
             href=&quot;https://www.nav.no/personvernerklaering&quot;&gt;om
             hva personopplysninger brukes til i Nav, i vår personvernerklæring&lt;/a&gt;. &lt;br
             /&gt; &lt;br /&gt;
-            Kontakt oss på chat eller telefon &lt;a href=&quot;tel:55553333&quot;&gt;55 55 33
+            Kontakt oss på telefon &lt;a href=&quot;tel:55553333&quot;&gt;55 55 33
             33&lt;/a&gt; (tastevalg 1) hvis henvendelsen gjelder kommunale tjenester som økonomisk
             sosialhjelp, bostøtte, midlertidig botilbud, kvalifiseringsprogrammet, eller økonomisk
             rådgivning.
