BTO knapp på intern flate skal være Send og avslutt

--- a/force-app/main/default/translations/no.translation-meta.xml
+++ b/force-app/main/default/translations/no.translation-meta.xml
@@ -21,6 +21,10 @@
         <name>STO_Share_With_User</name>
     </customLabels>
     <customLabels>
+        <label>Send og avslutt</label>
+        <name>BTO_Submit</name>
+    </customLabels>
+    <customLabels>
         <label>Vis melding</label>
         <name>STO_Medskriv_Label</name>
     </customLabels>
